--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Logueado", "posteo", "Posteo", "posteos"]
+  "cSpell.words": ["Logueado", "posteo", "Posteo", "posteos", "sesion"]
 }
